# GlassUI

./: .gitignore  Cargo.toml  README.adoc  package.json
src/: app.rs  main.rs  renderer.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri_schema_note.text
src-tauri/capabilities/: settings.json
src-tauri/src/: lib.rs  main.rs
