[package]
name = "glassui"
version = "0.1.0"
description = "GlassUI"
authors = ["Xyndra"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
xyndra_winui = { git = "https://github.com/Xyndra/xyndra_winui.git" }

[profile.dev]
incremental = true

[profile.release]
incremental = true